[tool.poetry]
name = "planet-simulation"
version = "0.1.0"
description = ""
authors = ["Bilesh Ganguly"]

[tool.poetry.dependencies]
python = ">=3.9.0"
pygame = "^2.1.2"
dearpygui = "^1.6.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"